xgreetersdir = $(datadir)/xgreeters
dist_xgreeters_DATA = pi-greeter.desktop

docdir = $(datadir)/doc/pi-greeter
dist_doc_DATA = sample-pi-greeter.css

configdir = $(sysconfdir)/lightdm
dist_config_DATA = pi-greeter.conf

uidir = $(datadir)/pi-greeter
ui_in_files = pi-greeter.glade
ui_DATA = $(ui_in_files)

